# Green-chemistry-analysis

./: .copier-answers.yml  LICENSE  README.md  main.py  pyproject.toml  tox.ini
docs/source/: conf.py
src/green_chemistry_analysis/: __init__.py
tests/: test_example_module.py
